--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "6.3.6",
     "editorconfig-tools": "0.1.1",
     "grunt": "1.0.1",
+    "grunt-bake": "^1.7.2",
     "grunt-browser-sync": "2.2.0",
     "grunt-contrib-watch": "1.0.0",
     "grunt-postcss": "0.8.0",
