--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "grunt-contrib-watch": "1.0.0",
     "grunt-csso": "^2.0.1",
     "grunt-postcss": "0.8.0",
-    "grunt-sass": "^1.2.0"
+    "grunt-sass": "^1.2.0",
+    "grunt-spritesmith": "^6.3.1"
   },
   "scripts": {
     "test": "editorconfig-tools check *",
